# pythonic-for

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: demo.rs  false_condition_test.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
src/: lib.rs
