[package]
name = "pythonic-for"
version = "0.1.0"
edition = "2021"
authors = ["Erkin Alp Güney <erkinalp9035@gmail.com>"]
description = "A Rust crate that provides a Python-style for loop with an else clause"
license = "MIT OR Apache-2.0"
repository = "https://github.com/erkinalp/pythonic-for"
documentation = "https://docs.rs/pythonic-for"
readme = "README.md"
keywords = ["python", "for", "loop", "else", "iterator"]
categories = ["rust-patterns", "no-std"]

[dependencies]
pythonic-for-proc-macros = { path = "./proc-macros", version = "0.1.0" }

[workspace]
members = ["proc-macros"]
