[package]
name = "pythonic-for"
version = "0.2.0"
edition = "2021"
authors = ["Erkin Alp Güney <erkinalp9035@gmail.com>"]
description = "A Rust crate that provides Python-style `for` and `while` loops with an optional `else` clause."
license = "MIT OR Apache-2.0"
repository = "https://github.com/erkinalp/pythonic-for"
documentation = "https://docs.rs/pythonic-for"
readme = "README.md"
keywords = ["python", "for", "while", "loop", "do-while", "else", "control-flow", "iterator", "proc-macro"]
categories = ["rust-patterns"]

[dependencies]
pythonic-for-proc-macros = { path = "./proc-macros", version = "0.2.0" }

[workspace]
members = ["proc-macros"]
